# Match3GamebyVahemx

./: CMakeLists.txt  README.md
cmake/: run.bat  run.py  run.sh
cmake_modules/: FindSFML.cmake
src/: Button.cpp  Button.hpp  Config.cpp  Config.hpp  GameController.cpp  GameController.hpp  GemElement.cpp  GemElement.hpp  Match3GameDefs.hpp  MatchPatterns.hpp  Matcher.cpp  Matcher.hpp  main.cpp
